--- a/money_minder/lib/l10n/app_es.arb
+++ b/money_minder/lib/l10n/app_es.arb
@@ -14,6 +14,6 @@
     "amount_star": "Importe (CAD)*",
     "enter_where": "Ingrese dónde realizó la transacción.",
     "this_field_req" : "¡Este campo es obligatorio!",
-    "oh_no": "¡Oh, no! \n Lo olvidé",
-    
+    "oh_no": "¡Oh, no! \n Lo olvidé"
+
 }
