--- a/money_minder/lib/l10n/app_es.arb
+++ b/money_minder/lib/l10n/app_es.arb
@@ -14,6 +14,31 @@
     "amount_star": "Importe (CAD)*",
     "enter_where": "Ingrese dónde realizó la transacción.",
     "this_field_req" : "¡Este campo es obligatorio!",
-    "oh_no": "¡Oh, no! \n Lo olvidé"
+    "oh_no": "¡Oh, no! \n Lo olvidé",
+    "welcome": "Bienvenido!",
+    "enter_email_pass": "Ingrese su correo electrónico y contraseña para acceder a su cuenta.",
+    "email_star": "Correo electrónico *",
+    "email_req" : "Correo electronico es requerido",
+    "email_valid" : "Introduzca una dirección de correo electrónico válida",
+    "pass_star" : "Contraseña *",
+    "pass_req" : "se requiere contraseña",
+    "pass_statement" : "La contraseña debe cumplir los siguientes requisitos: \n • Al menos 8 caracteres. \n • Al menos una letra mayúscula. \n • Al menos una letra minúscula. \n • Al menos un dígito.",
+    "invalid_email_or_pass" : "Correo electrónico o contraseña no válidos",
+    "login" : "Acceso",
+    "dont_have_acc" : "¿No tienes una cuenta? Inscribirse",
+    "create_account" : "Crear una cuenta",
+    "lets_create" : "¡Creemos una cuenta!",
+    "full_name_star" : "Nombre completo *",
+    "full_name_req" : "Se requiere nombre completo",
+    "user_name_req" : "Se requiere nombre de usuario",
+    "all" : "Todo",
+    "income" : "Ingreso",
+    "expense" : "Gastos",
+    "total_bal" : "Balance total:",
+    "recent_trans" : "Transacciones Recientes",
+    "about" : "Acerca de",
+    "privacy_security" : "Privacidad y seguridad",
+    "help_support" : "Servicio de asistencia",
+    "logout" : "Cerrar sesión"
 
 }
